# cc-haha-rust

./: .gitignore  README.en.md  README.md  REFACTORING_README.md  knapsack.py  setup-claude-launchers.sh  sorting.py
docs/: index.md  launcher.md
docs/reference/: refactoring.md
src-python/: pyproject.toml
src-python/coordinator/: __init__.py  dag.py  orchestrator.py  visualize.py
src-python/exploration/: __init__.py  report_builder.py
src-python/memory/: __init__.py  knowledge_graph.py
src-rust/: Cargo.toml
src-rust/cli/: Cargo.toml
src-rust/cli/src/: main.rs
src-rust/sandbox/: Cargo.toml
src-rust/sandbox/src/: lib.rs  seccomp.rs
src-rust/tool-executor/: Cargo.toml
src-rust/tool-executor/src/: lib.rs  pyffi.rs  result.rs  sandbox.rs
src-rust/vcr/: Cargo.toml
src-rust/vcr/src/: dehydrate.rs  fixture.rs  lib.rs
src-rust/verification/: Cargo.toml
src-rust/verification/src/: engine.rs  lib.rs
src/integration/: adapters.ts  index.ts  knowledgeGraphWrapper.ts  pythonBridge.ts  reportBuilderWrapper.ts  taskDagWrapper.ts
