[package]
name = "claude-haha-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude-haha-rust"
path = "src/main.rs"

[dependencies]
tool-executor = { path = "../tool-executor" }
sandbox = { path = "../sandbox" }
vcr = { path = "../vcr" }
verification = { path = "../verification" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
