[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"
description = "Sandbox with seccomp filtering for Linux"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]

[lib]
path = "src/lib.rs"
