[package]
name = "tool-executor"
version = "0.1.0"
edition = "2021"
description = "Safe subprocess execution with resource limits"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[lib]
path = "src/lib.rs"
