[package]
name = "vcr"
version = "0.1.0"
edition = "2021"
description = "Video Cassette Recorder for API response caching"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
memmap2 = "0.9"
dirs = "5.0"
regex-lite = "0.1"

[dev-dependencies]
tempfile = "3.10"

[lib]
path = "src/lib.rs"
